--- a/test-socket/build.gradle
+++ b/test-socket/build.gradle
@@ -30,6 +30,10 @@ dependencies {
 
 	testImplementation 'junit:junit:4.12'
 
+	implementation 'org.springframework.kafka:spring-kafka'
+	testImplementation 'org.springframework.kafka:spring-kafka-test'
+
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 
 }
 
